<resources>
    <string name="app_name">PierreZAREMBAERestaurant</string>
    <string name="Welcome">Bienvenue</string>
    <string name="Welcome2">Android EResto</string>
    <string name="home_image">home_image</string>
    <string name="mainCourse_image">mainCourse_image</string>
    <string name="starters">Entrées</string>
    <string name="main_course">Plats</string>
    <string name="Desserts">Desserts</string>
    <string name="starter_activity">starters</string>
    <string name="text_Cell">Item</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="detail_maincourse">detailMainCourseText</string>
    <string name="RunVolley">RunVolley</string>
    <string name="dishpicture">dishPicture</string>
    <string name="dishPrice">dishPrice</string>
    <string name="DetailView">DetailView</string>
    <string name="textIngredient">textIngredient</string>
    <string name="minusButton">-</string>
    <string name="plusButton">+</string>
    <string name="nbInBucket">1</string>
    <string name="Creation_de_compte">Création de compte</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nom">Nom</string>
    <string name="cr_ation_de_compte">Création de compte</string>
    <string name="enregistrement">enregistrement</string>
    <string name="pr_nom">Prénom</string>
    <string name="d_j_inscrit">Déjà Inscrit ?</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="adresse">Adresse</string>
    <string name="connexion">Connexion</string>
    <string name="email">Email</string>
    <string name="vous_tes_bien_enregistr_vous_pouvez_commander">Vous ètes bien enregistré. Vous pouvez commander</string>
    <string name="itembucket">ItemBucket</string>
    <string name="passez_votre_commande">Passez votre commande</string>
    <string name="votre_panier">Votre Panier</string>
    <string name="trash_image">Trash_image</string>
    <string name="quantity">quantity</string>
    <string name="je_n_ai_pas_pu_aller_plus_loin">je n\'ai pas pu aller plus loin</string>
</resources>