<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/detailtextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/courgette"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/text_Cell"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#DD2C00"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/imageDetailView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/DetailView"
        app:layout_constraintBottom_toTopOf="@+id/detailtextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textIngredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/courgette"
        android:gravity="center_horizontal"
        android:text="@string/textIngredient"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailtextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/plusButton"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusButton"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/minusButton"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="255dp"
        android:text="@string/minusButton"
        android:textColor="#FFFEFE"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textBucket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/courgette"
        android:text="@string/nbInBucket"
        android:textColor="#F8F5F5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="@+id/imageDetailView"
        app:layout_constraintVertical_bias="0.664" />

    <Button
        android:id="@+id/bucketButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>



